syntax = "proto3";
package pets;


message CreatePetResponse{
    string id = 1;
}