syntax = "proto3";
package pets;

import "responses/pets.proto";
import "requests/pets.proto";

service PetsService {
    rpc get(CreatePetRequest) returns (CreatePetResponse) {};
}